packages/components/src/css/component/ContextMenu.module.scss
@use '$flux/css/mixin';

.contextMenu {
    display: flex;
    flex-direction: column;
}

.contextMenuDialog {
    top: var(--pane-y);
    left: var(--pane-x);
    margin: 0;
    padding: 0;
    background: unset;
    border: 0;
    overflow: visible;

    &::backdrop {
        background: unset;
    }
}

.contextMenuPane {
    min-width: 180px;
    max-height: calc(100dvh - 60px);
    padding: 6px 0;
    box-shadow: var(--shadow-md);
    overflow: auto;

    &.isClosing {
        animation: contextMenuClose 210ms var(--swift-out) both;
    }

    &.isOpening {
        animation: contextMenuOpen 210ms var(--deceleration-curve) both;
    }
}

.contextMenuSubMenuPane {
    composes: basePane from './base/Pane.module.scss';

    position: fixed;
    top: var(--sub-pane-y);
    left: var(--sub-pane-x);
    min-width: 180px;
    max-height: calc(100dvh - 60px);
    padding: 6px 0;
    box-shadow: var(--shadow-md);
    overflow: auto;
    z-index: 100001;

    &.isClosing {
        animation: contextMenuClose 210ms var(--swift-out) both;
    }

    &.isOpening {
        animation: contextMenuOpen 210ms var(--deceleration-curve) both;
    }
}

.contextMenuPredictionCone {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    pointer-events: none;
    z-index: 100002;
}

@keyframes contextMenuClose {
    to {
        opacity: 0;
        scale: .97;
    }
}

@keyframes contextMenuOpen {
    from {
        opacity: 0;
        scale: .97;
    }
}

